force-app/main/default/objects/Vehicle_Type__c/Vehicle_Type__c.object-meta.xml
<CustomObject>
    <label>Vehicle Type</label>
    <nameField>
        <label>Vehicle Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>