force-app/main/default/objects/Vehicle_Type__c/fields/battery__c.field-meta.xml
<CustomField>
    <fullName>battery__c</fullName>
    <label>battery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>