force-app/main/default/objects/Vehicle_Type__c/fields/edition__c.field-meta.xml
<CustomField>
    <fullName>edition__c</fullName>
    <label>edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>