force-app/main/default/objects/Vehicle_Type__c/fields/imgUrl__c.field-meta.xml
<CustomField>
    <fullName>imgUrl__c</fullName>
    <label>imgUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>