force-app/main/default/objects/Vehicle_Type__c/fields/licensePlate__c.field-meta.xml
<CustomField>
    <fullName>licensePlate__c</fullName>
    <label>licensePlate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>