force-app/main/default/objects/Vehicle_Type__c/fields/motor__c.field-meta.xml
<CustomField>
    <fullName>motor__c</fullName>
    <label>motor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>